--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h1>Dark-_-</h1>
 
         <nav>
-            <a href="#" id="discord-link">Discord</a>
-            <a href="#" id="instagram-link">Instagram</a>
-            <a href="#" id="youtube-link">YouTube</a>
-            <a href="#" id="spotify-link">Spotify</a>
-            <a href="#" id="g2g-link">G2G</a>
-            <a href="#" id="steam-link">Steam</a> <!-- Added Steam link -->
+            <a href="https://discordapp.com/users/467073608423047169" id="discord-link">Discord</a>
+            <a href="https://www.instagram.com/darkfoxjnr/" id="instagram-link">Instagram</a>
+            <a href="https://www.youtube.com/channel/UCd8A7VPB6l04Ps9vVq9uFYg" id="youtube-link">YouTube</a>
+            <a href="https://open.spotify.com/user/31srfh7u7krxbxdtrebkzbncrszy" id="spotify-link">Spotify</a>
+            <a href="https://www.g2g.com/Xen_fat_pump" id="g2g-link">G2G</a>
+            <a href="https://steamcommunity.com/id/-_-dark-_-" id="steam-link">Steam</a>
         </nav>
 
         <div id="typed-text"></div>
