--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark-_-</title>
-    <link rel="icon" type="image/x-icon" href="your-favicon.ico"> <!-- Replace "your-favicon.ico" with the actual path to your favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico"> <!-- Replace "your-favicon.ico" with the actual path to your favicon -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
